--- a/assignment_03.Rmd
+++ b/assignment_03.Rmd
@@ -14,6 +14,7 @@ Based off of Chapter: "Data Transformation" in the R4DS book.
 
 ```{r}
 library('Lahman')
+library('nycflights13')
 library('tidyverse')
 ```
 
@@ -22,12 +23,42 @@ library('tidyverse')
 1.  How could you use `arrange()` to sort all missing values to the start?
     (Hint: use `is.na()`).
     
-1.  Sort `flights` to find the most delayed flights. Find the flights that
+```{r}
+(flights %>%
+  mutate(naCount = rowSums(is.na(flights))) %>%
+   arrange(desc(naCount)) %>%
+   select(naCount, everything())
+)
+```
+
+2.  Sort `flights` to find the most delayed flights. Find the flights that
     left earliest.
+```{r}
+(flights %>%
+   arrange(desc(dep_delay), dep_time))
+```
 
-1.  Sort `flights` to find the fastest flights.
+3.  Sort `flights` to find the fastest flights.
+```{r}
+(flights %>%
+   arrange(air_time) %>%
+   select(air_time, everything()))
 
-1.  Which flights travelled the longest? Which travelled the shortest?
+```
+
+
+4.  Which flights travelled the longest? Which travelled the shortest?
+```{r}
+# Travelled the longest - do we include delays???? - FLIGHT 15
+(flights %>%
+   arrange(desc(air_time)) %>%
+   select(air_time, flight, everything()))
+
+# Travelled the shortest - do we include delays???? - FLIGHT 4368
+(flights %>%
+   arrange(air_time) %>%
+   select(air_time, flight, everything()))
+```
 
 
 
@@ -36,21 +67,42 @@ library('tidyverse')
 1.  Brainstorm as many ways as possible to select `dep_time`, `dep_delay`,
     `arr_time`, and `arr_delay` from `flights`.
     
-1.  What happens if you include the name of a variable multiple times in
+```{r}
+(flights %>%
+   select(starts_with('dep'), starts_with('arr')))
+
+(flights %>%
+   select(ends_with('time'), ends_with('time')))
+
+(flights %>%
+   select(dep_time:arr_time, dep_delay:arr_delay))
+
+```
+    
+2.  What happens if you include the name of a variable multiple times in
     a `select()` call?
+```{r}
+# Only one instance is used
+(flights %>%
+   select(arr_time, arr_time))
+```
   
-1.  What does the `one_of()` function do? Why might it be helpful in conjunction
+3.  What does the `one_of()` function do? Why might it be helpful in conjunction
     with this vector?
     
     ```{r}
+    # Usuefl for re-usable select statments
     vars <- c("year", "month", "day", "dep_delay", "arr_delay")
+    (flights %>%
+        select(one_of(vars)))
     ```
     
-1.  Does the result of running the following code surprise you?  How do the
+4.  Does the result of running the following code surprise you?  How do the
     select helpers deal with case by default? How can you change that default?
 
     ```{r, eval = FALSE}
-    select(flights, contains("TIME"))
+    # Case is ignored
+    select(flights, contains("TiMe"))
     ```
 
 
@@ -75,19 +127,62 @@ ggplot(flights, aes(air_time - airtime2)) + geom_histogram()
     hard to compute with because they're not really continuous numbers. 
     Convert them to a more convenient representation of number of minutes
     since midnight.
+```{r}
+(flights %>%
+   mutate(
+     dep_time = (dep_time %/% 100) * 60 + (dep_time %% 100),
+     sched_dep_time = (sched_dep_time %/% 100) * 60 + (sched_dep_time %% 100)
+ ))
+```
     
-1.  Compare `air_time` with `arr_time - dep_time`. What do you expect to see?
+2.  Compare `air_time` with `arr_time - dep_time`. What do you expect to see?
     What do you see? What do you need to do to fix it?
+```{r}
+# Time zone difference?
+(flights %>%
+   mutate(
+     dep_time = (dep_time %/% 100) * 60 + (dep_time %% 100),
+     arr_time = (arr_time %/% 100) * 60 + (arr_time %% 100),
+     sched_dep_time = (sched_dep_time %/% 100) * 60 + (sched_dep_time %% 100),
+     total = (arr_time - dep_time)
+   ) %>%
+   select(dep_time, arr_time, arr_delay, dep_delay, total, air_time, everything())
+)
+```
     
-1.  Compare `dep_time`, `sched_dep_time`, and `dep_delay`. How would you
+3.  Compare `dep_time`, `sched_dep_time`, and `dep_delay`. How would you
     expect those three numbers to be related?
+```{r}
+(flights %>%
+   mutate(
+     dep_time = (dep_time %/% 100) * 60 + (dep_time %% 100),
+     arr_time = (arr_time %/% 100) * 60 + (arr_time %% 100),
+     sched_dep_time = (sched_dep_time %/% 100) * 60 + (sched_dep_time %% 100),
+   ) %>%
+   select(dep_time, sched_dep_time, dep_delay, air_time, everything())
+)
+```
 
-1.  Find the 10 most delayed flights using a ranking function. How do you want 
+4.  Find the 10 most delayed flights using a ranking function. How do you want 
     to handle ties? Carefully read the documentation for `min_rank()`.
+```{r}
+(flights %>%
+   mutate(most_delayed = min_rank(dep_delay)) %>%
+   arrange(most_delayed, dep_delay) %>%
+   select(most_delayed, everything())
+)
+```
 
-1.  What does `1:3 + 1:10` return? Why?
+5.  What does `1:3 + 1:10` return? Why?
+```{r}
+#huh?
+1:3 + 1:10
+```
 
-1.  What trigonometric functions does R provide?
+6.  What trigonometric functions does R provide?
+```{r}
+#sin
+```
 
 
 
@@ -98,32 +193,123 @@ ggplot(flights, aes(air_time - airtime2)) + geom_histogram()
     
     * A flight is 15 minutes early 50% of the time, and 15 minutes late 50% of 
       the time.
+```{r}
+(flights %>%
+  group_by(flight) %>%
+  summarize(
+    n(),
+    fifteenEarly = round(mean(arr_delay == -15, na.rm = TRUE), 1),
+    fifteenLate = round(mean(arr_delay == 15, na.rm = TRUE), 1)
+  ) %>%
+  filter(fifteenEarly == 0.5, fifteenLate == 0.5)
+ )
+
+```
+      
       
     * A flight is always 10 minutes late.
+```{r}
+(flights %>%
+  group_by(flight) %>%
+  summarize(
+    n(),
+    tenLate = round(mean(dep_delay == 10, na.rm = TRUE),1)
+  ) %>%
+  filter(tenLate == 1.0)
+ )
+```
 
     * A flight is 30 minutes early 50% of the time, and 30 minutes late 50% of 
       the time.
+```{r}
+(flights %>%
+  group_by(flight) %>%
+  summarize(
+    n(),
+    thirtyEarly = round(mean(arr_delay == -30, na.rm = TRUE), 1),
+    thirtyLate = round(mean(arr_delay == 30, na.rm = TRUE), 1)
+  ) %>%
+  filter(thirtyEarly == 0.5, thirtyLate == 0.5)
+ )
+```
       
     * 99% of the time a flight is on time. 1% of the time it's 2 hours late.
+```{r}
+(flights %>%
+  group_by(flight) %>%
+  summarize(
+    n(),
+    onTime = round(mean(arr_delay == 0, na.rm = TRUE), 2),
+    twoHoursLate = round(mean(arr_delay >= 120, na.rm = TRUE), 2)
+  ) %>%
+  filter(onTime == .99, twoHoursLate == .01)
+ )
+```
     
     Which is more important: arrival delay or departure delay?
+```{r}
+###????
+```
 
-1.  Come up with another approach that will give you the same output as 
+
+2.  Come up with another approach that will give you the same output as 
     `not_cancelled %>% count(dest)` and 
     `not_cancelled %>% count(tailnum, wt = distance)` (without using 
     `count()`).
+```{r}
+not_cancelled <- flights %>% 
+  filter(!is.na(dep_delay), !is.na(arr_delay))
 
-1.  Our definition of cancelled flights (`is.na(dep_delay) | is.na(arr_delay)`
+not_cancelled %>% 
+  group_by(dest) %>%
+  summarize(n())
+```
+    
+
+3.  Our definition of cancelled flights (`is.na(dep_delay) | is.na(arr_delay)`
     ) is slightly suboptimal. Why? Which is the most important column?
+```{r}
+# ???
 
-1.  Look at the number of cancelled flights per day. Is there a pattern?
+```
+
+4.  Look at the number of cancelled flights per day. Is there a pattern?
     Is the proportion of cancelled flights related to the average delay?
+```{r}
+flights %>%
+  group_by(day) %>%
+  summarize(
+    cancelled = mean(is.na(dep_delay)),
+    mean_dep = mean(dep_delay, na.rm = T),
+    mean_arr = mean(arr_delay, na.rm = T)
+  ) %>%
+  ggplot(aes(y=cancelled)) +
+    geom_point(aes(x = mean_dep), color = "red") +
+    geom_point(aes(x = mean_arr), color = "blue") +
+    labs(x='Arrival/Departure Delays', y='Cancelled Flights')
+```
 
-1.  Which carrier has the worst delays? Challenge: can you disentangle the
+5.  Which carrier has the worst delays? Challenge: can you disentangle the
     effects of bad airports vs. bad carriers? Why/why not? (Hint: think about
     `flights %>% group_by(carrier, dest) %>% summarise(n())`)
+```{r}
+(
+  flights %>% 
+    group_by(carrier, dest) %>% 
+    summarise(
+      n(),
+      worst_dep = max(dep_delay, na.rm = TRUE),
+      worst_arr = max(arr_delay, na.rm = TRUE)
+      ) %>%
+    arrange(desc(worst_dep, worst_arr)) %>%
+    filter(worst_dep > 0, worst_arr > 0)
+  )
+```
 
-1.  What does the `sort` argument to `count()` do. When might you use it?
+6.  What does the `sort` argument to `count()` do. When might you use it?
+```{r}
+# To sort by the count values
+```
 
 
 
